Removed the toList() function on a Stream for webfx compatibility